[project]
name = "PyMisc"
dependencies = [
    "bluesky-websocket-streaming",
    "bluesky-stomp==0.1.0",
    "matplotlib>=3.9.2",
    "numpy>=2.0.0",
    "fastapi>=0.112.0",
]
version = "0.1.0"
requires-python = ">=3.12"

[tool.uv.sources]
bird-feeder = { workspace = true }
bluesky-websocket-streaming = { workspace = true }
plotting-server = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]
exclude = ["packages/seeds"]

[tool.hatch.build.targets.wheel]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
